--- a/releases.html
+++ b/releases.html
@@ -17,13 +17,13 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster|Lobster+Two|Roboto+Slab&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css?">
+    <link rel="stylesheet" href="./css/styles.css?">
   </head>
 
   <body>
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="/index.html" class="navbar-brand">Visage Ltd Paris</a>
+        <a href="./index.html" class="navbar-brand">Visage Ltd Paris</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,16 +31,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav navbar-center">
             <li class="nav-item">
-              <a href="releases.html" class="nav-link">Releases</a>
+              <a href="./releases.html" class="nav-link">Releases</a>
             </li>
             <li class="nav-item">
-              <a href="/artists.html" class="nav-link">Artists</a>
+              <a href="./artists.html" class="nav-link">Artists</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
+              <a href="./about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
+              <a href="./contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
           <ul class="navbar-nav navbar-right">
@@ -81,8 +81,12 @@
           <p>Buy it here :</p>
         </div>
         <div class="release-link">
-          <a href="https://www.deejay.de/Moratu_Ama_76_EP_VISAGE001_Vinyl__322246" target="blank"><img src="https://45rpm.ch/content/images/2015/01/deejay_de_new_logo-1.png" alt="Deejay.de"></a>
-          <a href="https://www.discogs.com/fr/Moratu-Ama-76/release/12481026" target="blank"><img src="https://www.discogs.com/images/brand/discogs-logo.svg" alt="Discogs.com"></a>
+          <a href="https://www.deejay.de/Moratu_Ama_76_EP_VISAGE001_Vinyl__322246" target="blank">
+            <img class="logo-releases" src="https://45rpm.ch/content/images/2015/01/deejay_de_new_logo-1.png" alt="Deejay.de">
+          </a>
+          <a href="https://www.discogs.com/fr/Moratu-Ama-76/release/12481026" target="blank">
+            <img class="logo-releases" src="https://www.discogs.com/images/brand/discogs-logo.svg" alt="Discogs.com">
+          </a>
         </div>
       </div>
       <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/568865508&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
