contact & about body

--- a/about.html
+++ b/about.html
@@ -20,3 +20,47 @@
     <link rel="stylesheet" href="./css/styles.css?">
   </head>
 </html>
+
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a href="./index.html" class="navbar-brand">Visage Ltd Paris</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav navbar-center">
+          <li class="nav-item">
+            <a href="./releases.html" class="nav-link">Releases</a>
+          </li>
+          <li class="nav-item">
+            <a href="./artists.html" class="nav-link">Artists</a>
+          </li>
+          <li class="nav-item">
+            <a href="./about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contact.html" class="nav-link">Contact</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav navbar-right">
+          <li class="nav-item">
+            <a href="https://www.facebook.com/visagerecords/" class="nav-link px-2" target="_blank"><i class="fab fa-facebook-f"></i></a>  
+          </li>
+          <li class="nav-item">
+            <a href="https://soundcloud.com/visage-ltd-paris" class="nav-link px-2" target="_blank"><i class="fab fa-soundcloud"></i></a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.instagram.com/visage_ltd" class="nav-link px-2" target="_blank"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.residentadvisor.net/record-label.aspx?id=16354" class="nav-link px-2" target="_blank"><i class="socicon-residentadvisor"></i></a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.discogs.com/fr/label/1516332-Visage-LTD" class="nav-link px-2" target="_blank"><img src="https://a.discogs.com/2ce6b03a9c21d5ea3958decb97df117e6bf3e481/images/favicon.ico" alt="DC"></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+</body>
