about artists navbar

--- a/artists.html
+++ b/artists.html
@@ -21,8 +21,8 @@
 
   <body>
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="./index.html" class="navbar-brand">Visage Ltd Paris</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+        <a href="./index.html" class="navbar-brand"><img src="https://res.cloudinary.com/dwptvy074/image/upload/v1566835759/logo2_nphbqx.png" class="visage-img-navbar"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -56,7 +56,7 @@
               <a href="https://www.residentadvisor.net/record-label.aspx?id=16354" class="nav-link px-2" target="_blank"><i class="socicon-residentadvisor"></i></a>
             </li>
             <li class="nav-item">
-              <a href="https://www.discogs.com/fr/label/1516332-Visage-LTD" class="nav-link px-2" target="_blank"><img src="https://a.discogs.com/2ce6b03a9c21d5ea3958decb97df117e6bf3e481/images/favicon.ico" alt="DC"></a>
+              <a href="https://www.residentadvisor.net/record-label.aspx?id=16354" class="nav-link px-2" target="_blank"><img src="./assets/ra.png"></a>
             </li>
           </ul>
         </div>
