--- a/artists.html
+++ b/artists.html
@@ -62,11 +62,17 @@
         </div>
       </nav>
       
-    <div class="text-center">
+    <div class="text-center artists-info">
+      <h1>Visage's Artists</h1>
+      <br>
       <ul>
+        <li>Andu Simion</li>
+        <li>Crihan1</li>
+        <li>Dragusanu</li>
         <li>Moratu</li>
         <li>Petit Batou</li>
         <li>Phoq</li>
+        <li>Silat Beksi</li>
         <li>Vid</li>
       </ul>
     </div>
@@ -78,7 +84,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                  <small>Copyright © 2020 - Visage LTD - Design by <a href="http://www.maximederouet.com" target="blank">MD</a></small>
+                  <small>Copyright © 2020 - Visage Ltd</small>
                 </div>
             </div>
         </div>
