--- a/contact.html
+++ b/contact.html
@@ -98,4 +98,13 @@
         </ul>
       </div>
     </div>
+    <footer class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-12 text-center">
+                <small>Copyright © 2020 - Visage Ltd</small>
+              </div>
+          </div>
+      </div>
+  </footer>
 </body>
