--- a/about.html
+++ b/about.html
@@ -72,4 +72,13 @@
         Vinyl only label based in Paris, founded in 2018 by Phoq & Petit Batou
       </p>
     </div>
+    <footer class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-12 text-center">
+                <small>Copyright © 2020 - Visage Ltd</small>
+              </div>
+          </div>
+      </div>
+  </footer>
 </body>
